--- a/backend/package.json
+++ b/backend/package.json
@@ -16,17 +16,18 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.x.x",
     "@types/cors": "^2.x.x",
-    "@types/express": "^4.x.x",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.x.x",
     "cors": "^2.8.5",
     "dotenv": "^16.x.x",
     "express": "^4.x.x",
+    "multer": "^1.4.5-lts.1",
     "ts-node": "^10.x.x",
     "typescript": "^5.x.x"
   },
   "devDependencies": {
     "@types/cors": "^2.x.x",
-    "@types/express": "^4.x.x",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.x.x",
     "nodemon": "^3.x.x",
     "ts-node-dev": "^2.x.x",
