--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.x.x",
     "express": "^4.x.x",
+    "form-data": "^4.0.0",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^2.7.0",
     "ts-node": "^10.x.x",
     "typescript": "^5.x.x"
   },
