--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.x.x",
     "@types/cors": "^2.x.x",
+    "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.x.x",
     "@types/uuid": "^10.0.0",
@@ -24,6 +25,7 @@
     "dotenv": "^16.x.x",
     "express": "^4.x.x",
     "form-data": "^4.0.0",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.7.0",
     "ts-node": "^10.x.x",
