--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,6 @@
     "@types/cors": "^2.x.x",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
-    "@types/node": "^20.x.x",
     "@types/uuid": "^10.0.0",
     "axios": "^1.8.2",
     "cors": "^2.8.5",
@@ -28,16 +27,15 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.7.0",
-    "ts-node": "^10.x.x",
-    "typescript": "^5.x.x",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/cors": "^2.x.x",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.x.x",
+    "@types/node": "^20.17.24",
     "nodemon": "^3.x.x",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.x.x",
-    "typescript": "^5.x.x"
+    "typescript": "^5.8.2"
   }
 }
