--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_API_URL=https://havaasa-backend-production.up.railway.app 
+VITE_API_URL=https://havaasa-backend-production.up.railway.app:5000 
