--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@supabase/supabase-js": "^2.49.1",
     "@tanstack/react-query": "^5.56.2",
+    "@tinymce/tinymce-react": "^6.0.0",
     "@types/express": "^5.0.0",
     "@types/multer": "^1.4.12",
     "class-variance-authority": "^0.7.1",
